# pantry-pilot

./: .editorconfig  .gitignore  Makefile  README.md  docker-compose-service.yml  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
apps/agent/: .env.example  Dockerfile  README.md  pyproject.toml
apps/agent/app/: config.py  main.py  prompts.py  receipt_agent.py  schemas.py  vision_service.py
apps/api/: Dockerfile  README.md  pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 20260101_000000_initial_schema.py  20260115_102256_add_merchant_name_and_total_amount_to_receipts.py
apps/api/app/: config.py  database.py  main.py
apps/api/app/models/: __init__.py  receipt_item.py  receipts.py  users.py
apps/api/app/repository/: __init__.py  receipt_repository.py
apps/api/app/routers/: __init__.py  health.py  receipts.py
apps/api/app/routers/response/: receipt.py
apps/api/app/services/: __init__.py  minio_service.py  ocr_service.py  queue_client.py  receipt_service.py
apps/api/tests/: conftest.py
apps/api/tests/repository/: receipt_repository_test.py
apps/api/tests/routers/: health_test.py  receipt_test.py
apps/api/tests/service/: receipt_service_test.py
apps/mcp/: .env.example  Dockerfile  pyproject.toml
apps/mcp/app/: config.py  main.py  server.py  types.py
apps/mcp/app/requests/: request.py
apps/mcp/app/responses/: health_check.py
apps/mcp/app/tools/: __init__.py  get_image.py  get_receipt_context.py  ocr_text.py  validate_extraction.py
apps/queue/: .env.example  Dockerfile  README.md  pyproject.toml
apps/queue/pantry_queue/: client.py  config.py
apps/queue/pantry_queue/tasks/: ocr_tasks.py
apps/queue/pantry_queue/workers/: worker.py
apps/web/: Dockerfile  README.md  pyproject.toml
apps/web/app/: config.py  main.py
apps/web/app/components/: __init__.py  footer.py  header.py
apps/web/app/views/: __init__.py  bulk_upload.py  receipts_list.py  upload_receipt.py
docs/: api-contracts.md  architecture.md  database-schema.md  devlog-template.md  mcp-tools-design.md  ocr-queue-design.md  ollama-integration.md  queue-service-migration.md  quick-start-ollama.md  roadmap.md  technical_proposal.md  tracking.md
docs/devlogs/: 2026-W01.md  2026-W02.md
docs/plans/: 2026-W01-plan.md  2026-W02-plan.md
infra/ollama/: Dockerfile  entrypoint.sh
infra/postgres/: init.sql
scripts/: setup-ollama.sh
