[project]
name = "pantry-pilot-agent"
version = "0.3.0"
description = "LLM agent for receipt extraction using OpenAI GPT-4o vision model"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "httpx>=0.26.0",
    "pydantic>=2.5.0",
    "pillow>=10.2.0",
    "opencv-python>=4.9.0",
    "numpy>=1.24.0",
    "openai>=1.12.0",
]

[tool.uv.sources]
pantry-pilot-shared = { path = "../../packages/shared", editable = true }

[dependency-groups]
dev = [
    "pytest>=7.4",
    "pytest-asyncio>=0.23",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
exclude = ["tests*"]