[project]
name = "pantry-pilot-web"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "streamlit>=1.30.0",
    "httpx>=0.26.0",
    "python-dotenv>=1.0.0",
]

[dependency-groups]
dev = [
    "pytest>=7.4",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
